Preliminary stab at compatability with WP MU, plus some miscellaneous bug fixes.
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@25107 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -1,6 +1,15 @@
 FeedWordPress Change Log
 ========================
 
+Changes from 0.99 to 0.991
+--------------------------
+*	WORDPRESS MU COMPATABILITY
+
+*	DISPLAY OF MAGPIE WARNINGS
+
+*	MINOR INTERFACE BUGS FIXED
+
+
 Changes from 0.981 to 0.99
 --------------------------
 Version 0.99 adds several significant new features, fixes some bugs, and
