--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -7,6 +7,8 @@ Changes from 0.99 to 0.991
 
 *	DISPLAY OF MAGPIE WARNINGS
 
+*	MAGPIERSS BUG WITH media:content FIXED
+
 *	MINOR INTERFACE BUGS FIXED
 
 
